Hide duration text, if it's not coming from the API.

--- a/lib/mocked/templates/lx/api/search/happy.json
+++ b/lib/mocked/templates/lx/api/search/happy.json
@@ -2308,7 +2308,7 @@
       "fromPrice": "$105",
       "fromPriceValue": "105",
       "fromOriginalPrice": "",
-      "duration": "1h",
+      "duration": null,
       "durationInMillis": 3600000,
       "fromPriceTicketType": "vehicle",
       "fromPriceTicketCode": "Vehicle",
