Improve itinerary automated tests
- Future-proof itin dates. Dynamically set flight itins
to always be two weeks from today
- Add mocked roundtrip flight itin
- Add air attach itin
- Add mocked car itin
- Update trips UI test

--- a/lib/mocked/templates/api/flight/search/happy_roundtrip.json
+++ b/lib/mocked/templates/api/flight/search/happy_roundtrip.json
@@ -8,12 +8,12 @@
                     "airlineName": "American Airlines",
                     "arrivalAirportCode": "${departureAirport}",
                     "arrivalAirportLocation": "${departureAirport}",
-                    "arrivalTimeEpochSeconds": ${returnFlightLandingTimeEpochSeconds},
-                    "arrivalTimeZoneOffsetSeconds": ${tzOffsetSeconds},
+                    "arrivalTimeEpochSeconds": "${returnFlightLandingTimeEpochSeconds}",
+                    "arrivalTimeZoneOffsetSeconds": "${tzOffsetSeconds}",
                     "departureAirportCode": "${arrivalAirport}",
                     "departureAirportLocation": "${arrivalAirport}",
-                    "departureTimeEpochSeconds": ${returnFlightTakeoffTimeEpochSeconds},
-                    "departureTimeZoneOffsetSeconds": ${tzOffsetSeconds},
+                    "departureTimeEpochSeconds": "${returnFlightTakeoffTimeEpochSeconds}",
+                    "departureTimeZoneOffsetSeconds": "${tzOffsetSeconds}",
                     "distance": 2572,
                     "distanceUnits": "miles",
                     "equipmentCode": "32B",
@@ -33,12 +33,12 @@
                     "airlineName": "Delta",
                     "arrivalAirportCode": "${arrivalAirport}",
                     "arrivalAirportLocation": "${arrivalAirport}",
-                    "arrivalTimeEpochSeconds": ${departingFlightLandingTimeEpochSeconds},
-                    "arrivalTimeZoneOffsetSeconds": ${tzOffsetSeconds},
+                    "arrivalTimeEpochSeconds": "${departingFlightLandingTimeEpochSeconds}",
+                    "arrivalTimeZoneOffsetSeconds": "${tzOffsetSeconds}",
                     "departureAirportCode": "${departureAirport}",
                     "departureAirportLocation": "${departureAirport}",
-                    "departureTimeEpochSeconds": ${departingFlightTakeoffTimeEpochSeconds},
-                    "departureTimeZoneOffsetSeconds": ${tzOffsetSeconds},
+                    "departureTimeEpochSeconds": "${departingFlightTakeoffTimeEpochSeconds}",
+                    "departureTimeZoneOffsetSeconds": "${tzOffsetSeconds}",
                     "distance": 2572,
                     "distanceUnits": "miles",
                     "equipmentCode": "752",
