s/4080 Cars filters + Tests

--- a/lib/mocked/templates/m/api/cars/search/airport/happy.json
+++ b/lib/mocked/templates/m/api/cars/search/airport/happy.json
@@ -56,7 +56,7 @@
                 "minDoors": 4,
                 "smallLuggageCapacity": 0,
                 "carCategoryDisplayLabel":"Standard",
-                "transmission": "AUTOMATIC_TRANSMISSION",
+                "transmission": "MANUAL_TRANSMISSION",
                 "type": "TWO_DOOR_CAR"
             },
             "vendor": {
