Remove html characters visible in some activity titles.
- Handled this for offer title as well.

--- a/lib/mocked/templates/lx/api/search/happy.json
+++ b/lib/mocked/templates/lx/api/search/happy.json
@@ -11,7 +11,7 @@
   "activities": [
     {
       "id": "183607",
-      "title": "Helicopter Tour of Landmarks by Liberty Helicopters",
+      "title": "Helicopter &quot; Tour of Landmarks by Liberty Helicopters",
       "imageUrl": "//a.travel-assets.com/mediavault.le/media/eb10854299dac3c6abfcff9b9f0f4e0722960c15.jpeg",
       "fromPrice": "$150",
       "fromPriceValue": "150",
