--- a/project/src/wotif/AndroidManifest.xml
+++ b/project/src/wotif/AndroidManifest.xml
@@ -2,6 +2,62 @@
 
     <application>
 
+        <!-- Deep link routing activity -->
+        <activity
+            android:name="com.expedia.bookings.activity.DeepLinkRouterActivity"
+            android:theme="@android:style/Theme.NoDisplay" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:host="w.wotf.co" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="wotf" />
+                <data android:host="home" />
+                <data android:host="trips" />
+                <data android:host="showTrips" />
+                <data android:host="hotelSearch" />
+                <data android:host="flightSearch" />
+                <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
+                <data android:host="addSharedItinerary" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:pathPrefix="/m/trips/shared"
+                    android:scheme="https"/>
+
+                <data android:host="www.wotif.com" />
+
+                <!-- Integration Server -->
+                <data android:host="wwwwotifcom.integration.sb.karmalab.net" />
+
+                <!-- Trunk Server -->
+                <data android:host="wwwwotifcom.trunk.sb.karmalab.net" />
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name="com.expedia.bookings.activity.WotifLocaleChangeReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.expedia.bookings.action.wotif_locale_changed" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
