--- a/project/build.gradle
+++ b/project/build.gradle
@@ -67,13 +67,16 @@ dependencies {
     }
 
     // Debug dependencies
+    debugCompile('com.squareup.okhttp:mockwebserver:2.3.0')
+    debugCompile (project(':lib:mocked:mocke3')) {
+        transitive = false
+    }
 
     def stethoVersion = '1.1.0'
     debugCompile "com.facebook.stetho:stetho:$stethoVersion"
     debugCompile "com.facebook.stetho:stetho-okhttp:$stethoVersion"
 
     // Test dependencies
-
     androidTestCompile ('com.android.support.test.espresso:espresso-core:2.0'){
         exclude group: 'com.android.support'
         exclude group: 'javax.inject'
@@ -85,12 +88,6 @@ dependencies {
     androidTestCompile fileTree(dir: 'libs', include: [
             'spoon-client-1.1.3-EXP.jar',
     ])
-    androidTestCompile('com.squareup.okhttp:mockwebserver:2.3.0') {
-        exclude group: 'com.squareup.okhttp'
-    }
-    androidTestCompile (project(':lib:mocked:mocke3')) {
-        transitive = false
-    }
 }
 
 android {
@@ -217,8 +214,8 @@ android {
     }
 
     sourceSets {
-        androidTest {
-            assets.srcDirs = ['src/androidTest/assets', '../lib/mocked/templates']
+        debug {
+            assets.srcDirs = ['../lib/mocked/templates']
         }
     }
 
