--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '0.11.91.4'
+
     repositories {
         maven { url 'https://maven.fabric.io/public' }
         mavenCentral()
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.18.0'
-        classpath 'com.android.tools.build:gradle:1.2.0'
+        classpath 'com.android.tools.build:gradle:1.2.2'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
     }
 }
 
