--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'jacoco'
 apply plugin: 'checkstyle'
 
@@ -16,6 +17,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'io.reactivex:rxjava:1.0.8'
     compile 'org.json:json:20140107'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 
     testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
     testCompile 'junit:junit:4.11'
