--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -12,6 +12,18 @@
             android:theme="@style/V2.Theme.Cars" >
         </activity>
 
+        <activity
+            android:name="com.expedia.bookings.ui.HotelActivity"
+            android:taskAffinity="com.expedia.bookings.ui.HotelActivity"
+            android:label="New Hotels"
+            android:theme="@style/V2.Theme.Hotels" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
