--- a/lib/mocked/mocke3/build.gradle
+++ b/lib/mocked/mocke3/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'application'
 
 sourceCompatibility = 1.7
@@ -11,6 +12,8 @@ repositories {
 dependencies {
     compile 'com.squareup.okhttp:mockwebserver:2.3.0'
     compile 'joda-time:joda-time:2.7'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+    testCompile 'junit:junit:4.11'
 }
 
 mainClassName = "com.mobiata.mocke3.RunMockWebServer"
