--- a/project/build.gradle
+++ b/project/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okio:okio:1.3.0'
     compile 'com.squareup:otto:1.3.5'
+    compile 'com.squareup.phrase:phrase:1.1.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.leanplum:Leanplum:1.2.8'
