4547 hotel cross-sell, fix build
Update the mock Flight checkout response so the new parser
doesn't blow up on test runs.

--- a/lib/mocked/templates/api/flight/checkout/happy_oneway_3.json
+++ b/lib/mocked/templates/api/flight/checkout/happy_oneway_3.json
@@ -7,6 +7,9 @@
     },
     "orderId": "000003",
     "totalCharges": "546.00",
+    "flightDetailResponse": {
+        "destinationRegionId": 6139107
+    },
     "totalChargesPrice": {
         "amount": "546.00",
         "formattedPrice": "$546.00",
