--- a/lib/mocked/templates/api/flight/checkout/happy_oneway_0.json
+++ b/lib/mocked/templates/api/flight/checkout/happy_oneway_0.json
@@ -7,6 +7,9 @@
     },
     "orderId": "000000",
     "totalCharges": "696.00",
+    "flightDetailResponse": {
+        "destinationRegionId": 6139107
+    },
     "totalChargesPrice": {
         "amount": "696.00",
         "formattedPrice": "$696.00",
