--- a/lib/mocked/templates/api/flight/checkout/happy_oneway_1.json
+++ b/lib/mocked/templates/api/flight/checkout/happy_oneway_1.json
@@ -7,6 +7,9 @@
     },
     "orderId": "000001",
     "totalCharges": "596.00",
+    "flightDetailResponse": {
+        "destinationRegionId": 6139107
+    },
     "totalChargesPrice": {
         "amount": "596.00",
         "formattedPrice": "$596.00",
