--- a/lib/mocked/templates/api/flight/checkout/happy_oneway_2.json
+++ b/lib/mocked/templates/api/flight/checkout/happy_oneway_2.json
@@ -7,6 +7,9 @@
     },
     "orderId": "000002",
     "totalCharges": "646.00",
+    "flightDetailResponse": {
+        "destinationRegionId": 6139107
+    },
     "totalChargesPrice": {
         "amount": "646.00",
         "formattedPrice": "$646.00",
