--- a/lib/mocked/templates/api/flight/checkout/happy_oneway_4.json
+++ b/lib/mocked/templates/api/flight/checkout/happy_oneway_4.json
@@ -7,6 +7,9 @@
     },
     "orderId": "000004",
     "totalCharges": "746.00",
+    "flightDetailResponse": {
+        "destinationRegionId": 6139107
+    },
     "totalChargesPrice": {
         "amount": "746.00",
         "formattedPrice": "$746.00",
