--- a/project/build.gradle
+++ b/project/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     }
 
     // Debug dependencies
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+
     debugCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
     debugCompile (project(':lib:mocked:mocke3')) {
         transitive = false
