--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 
     testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
-    testCompile 'junit:junit:4.11'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:2.0.0'
     testCompile (project(':lib:mocked:mocke3')) {
         transitive = false
     }
