--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ org.gradle.jvmargs=-XX:PermSize=256M -XX:MaxPermSize=512M -Xms256M -Xmx4096M
 # These speed up the build but make it harder to debug the build process
 org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.configureondemand=true
 
