--- a/project/build.gradle
+++ b/project/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     def roboVersion = '3.0-rc3'
     testCompile "org.robolectric:robolectric:${roboVersion}"
     testCompile "org.robolectric:shadows-multidex:${roboVersion}"
+    testCompile "org.mockito:mockito-core:1.10.19"
 
     androidTestCompile ('com.android.support.test.espresso:espresso-core:2.1'){
         exclude group: 'com.android.support'
