--- a/project/build.gradle
+++ b/project/build.gradle
@@ -92,14 +92,20 @@ dependencies {
     testCompile "org.robolectric:shadows-multidex:${roboVersion}"
     testCompile "org.mockito:mockito-core:1.10.19"
 
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.1'){
+    def espressoVersion = '2.1'
+    androidTestCompile ("com.android.support.test.espresso:espresso-core:${espressoVersion}"){
         exclude group: 'com.android.support'
         exclude group: 'javax.inject'
     }
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.1'){
+    androidTestCompile ("com.android.support.test.espresso:espresso-contrib:${espressoVersion}"){
         exclude group: 'com.android.support'
         exclude group: 'javax.inject'
     }
+
+    androidTestCompile 'com.android.support.test:rules:0.2'
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
+    androidTestCompile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
+
     androidTestCompile fileTree(dir: 'libs', include: [
             'spoon-client-1.1.3-EXP.jar',
     ])
