Deeplink to cars search

--- a/project/src/expedia/AndroidManifest.xml
+++ b/project/src/expedia/AndroidManifest.xml
@@ -39,6 +39,7 @@
                 <data android:host="flightSearch" />
                 <data android:host="destination" />
                 <data android:host="localexpert"/>
+                <data android:host="carSearch"/>
 
                 <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
                 <data android:host="addSharedItinerary" />
