2624 - LX strikethrough price on Search results.

--- a/lib/mocked/templates/lx/api/search/happy.json
+++ b/lib/mocked/templates/lx/api/search/happy.json
@@ -15,7 +15,8 @@
       "imageUrl": "//a.travel-assets.com/mediavault.le/media/eb10854299dac3c6abfcff9b9f0f4e0722960c15.jpeg",
       "fromPrice": "$150",
       "fromPriceValue": "150",
-      "fromOriginalPrice": "",
+      "fromOriginalPrice": "$160",
+      "fromOriginalPriceValue": "160",
       "duration": "14m",
       "durationInMillis": 840000,
       "fromPriceTicketType": "traveler",
@@ -35,7 +36,8 @@
       "imageUrl": "//a.travel-assets.com/mediavault.le/media/ef98d5da9bdd000ca51dec2b15960f73fe703604.jpeg",
       "fromPrice": "$130",
       "fromPriceValue": "130",
-      "fromOriginalPrice": "",
+      "fromOriginalPrice": "$140",
+      "fromOriginalPriceValue": "140",
       "duration": "2d",
       "durationInMillis": 172800000,
       "fromPriceTicketType": "adult",
