--- a/project/build.gradle
+++ b/project/build.gradle
@@ -50,12 +50,12 @@ dependencies {
     compile "com.google.android.gms:play-services-location:${rootProject.ext.googlePlayServicesVersion}"
 
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.okio:okio:1.3.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okio:okio:1.4.0'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.phrase:phrase:1.1.0'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.leanplum:Leanplum:1.2.13'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile 'io.reactivex:rxandroid:0.24.0'
@@ -64,8 +64,8 @@ dependencies {
     }
 
     // Dagger 2.0
-    compile 'com.google.dagger:dagger:2.0'
-    apt 'com.google.dagger:dagger-compiler:2.0'
+    compile 'com.google.dagger:dagger:2.0.1'
+    apt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     compile ('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
@@ -73,15 +73,16 @@ dependencies {
     }
 
     // Debug dependencies
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    def leakCanaryVersion = '1.3.1'
+    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}"
 
-    debugCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
+    debugCompile 'com.squareup.okhttp:mockwebserver:2.4.0'
     debugCompile (project(':lib:mocked:mocke3')) {
         transitive = false
     }
 
-    def stethoVersion = '1.1.0'
+    def stethoVersion = '1.1.1'
     debugCompile "com.facebook.stetho:stetho:${stethoVersion}"
     debugCompile "com.facebook.stetho:stetho-okhttp:${stethoVersion}"
 
@@ -92,7 +93,7 @@ dependencies {
     testCompile "org.robolectric:shadows-multidex:${roboVersion}"
     testCompile "org.mockito:mockito-core:1.10.19"
 
-    def espressoVersion = '2.1'
+    def espressoVersion = '2.2'
     androidTestCompile ("com.android.support.test.espresso:espresso-core:${espressoVersion}"){
         exclude group: 'com.android.support'
         exclude group: 'javax.inject'
@@ -102,9 +103,8 @@ dependencies {
         exclude group: 'javax.inject'
     }
 
-    androidTestCompile 'com.android.support.test:rules:0.2'
+    androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
-    androidTestCompile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
 
     androidTestCompile fileTree(dir: 'libs', include: [
             'spoon-client-1.1.3-EXP.jar',
