--- a/project/build.gradle
+++ b/project/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:recyclerview-v7:21.0.3"
     compile "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
-    compile 'com.android.support:support-annotations:${rootProject.ext.supportLibVersion}'
+    compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
 
     compile "com.google.android.gms:play-services-maps:${rootProject.ext.googlePlayServicesVersion}"
     compile "com.google.android.gms:play-services-wallet:${rootProject.ext.googlePlayServicesVersion}"
