--- a/project/build.gradle
+++ b/project/build.gradle
@@ -232,6 +232,18 @@ android {
             versionCode GradleUtil.versionCode(major, minor, patch, build)
             versionName GradleUtil.versionName(major, minor, patch, build)
         }
+
+        samsung {
+            buildConfigField "String", "MEDIA_URL", "\"https://media.expedia.com\""
+            applicationId "com.samsung.travel.android"
+
+            def major = 1
+            def minor = 0
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
+        }
     }
 
     buildTypes {
