Add s3 maven repository
Not useful now but it will be soon

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 
+# For our s3 maven repo. This is a read-only user
+AWS_ACCESS_KEY=AKIAIEACFER25MSSUBDQ
+AWS_SECRET_KEY=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
