--- a/project/build.gradle
+++ b/project/build.gradle
@@ -15,6 +15,13 @@ repositories {
     mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
     maven { url 'http://www.leanplum.com/leanplum-sdks/' }
+    maven {
+        url "s3://mobiata-maven/release"
+        credentials(AwsCredentials) {
+            accessKey AWS_ACCESS_KEY
+            secretKey AWS_SECRET_KEY
+        }
+    }
 }
 
 dependencies {
