Cars Insurance included automation.

--- a/lib/mocked/templates/m/api/cars/search/airport/happy.json
+++ b/lib/mocked/templates/m/api/cars/search/airport/happy.json
@@ -88,6 +88,9 @@
                     "formattedWholePrice": "$32"
                 }
             },
+            "hasFreeCancellation": true,
+            "hasUnlimitedMileage": true,
+            "isInsuranceIncluded": true,
             "pickUpLocation": {
                 "airportInstructions": "Shuttle to counter and car",
                 "latitude": 37.61594,
